--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -731,8 +731,8 @@ place:
       value: air_watch  #internal value used for this category
       label: _(Air watch)  #label for this category
       fields:  #field types can be: "dropdown", "radio_big_buttons", "checkbox_big_buttons", "yes_only_big_button", "text", or "textarea"
-        - name: date_observed 
-          type: date  
+        - name: date_time_observed 
+          type: datetime  
           prompt: _(When did you observe these conditions?)
           display_prompt: _(I observed these conditions on:)
           optional: true
