--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -640,7 +640,17 @@ place:
           type: checkbox_big_buttons
           prompt: _(Types of pollution seen:)
           display_prompt: _(I saw the following types of pollution here:)
-          content: pollution_types
+          content:
+            - label: _(Sewage)
+              value: sewage
+            - label: _(Tires)
+              value: tires
+            - label: _(Illegal dumpsite)
+              value: dumpsite
+            - label: _(Litter)
+              value: litter
+            - label: _(Other)
+              value: other
           optional: true
         - name: description
           type: textarea
@@ -724,34 +734,54 @@ place:
           type: binary_toggle 
           prompt: _(Do you reside and/or work in the Georgetown or South Park Neighborhood?)
           display_prompt: _(I reside or work in Georgetown or South Park:)
-          content: yes_no
+          content:
+            - label: _(Yes)
+              value: "yes"
+            - label: _(No)
+              value: "no"
           optional: true
         - name: odd_smell
           type: binary_toggle 
           prompt: _(I observe an odd smell)
           display_prompt: _(I observed an odd smell:)
-          content: yes_no
+          content:
+            - label: _(Yes)
+              value: "yes"
+            - label: _(No)
+              value: "no"
           annotation: _(Please be sure to seek medical attention if needed.)
           optional: true
         - name: burning
           type: binary_toggle
           prompt: _(I have burning or itching eyes/nose/skin)
           display_prompt: _(I have burning or itching eyes/nose/skin:)
-          content: yes_no
+          content:
+            - label: _(Yes)
+              value: "yes"
+            - label: _(No)
+              value: "no"
           annotation: _(Please be sure to seek medical attention if needed.)
           optional: true
         - name: difficulty_breathing
           type: binary_toggle
           prompt: _(I am having difficulty breathing)
           display_prompt: _(I am having difficulty breathing:)
-          content: yes_no
+          content:
+            - label: _(Yes)
+              value: "yes"
+            - label: _(No)
+              value: "no"
           annotation: _(Please be sure to seek medical attention if needed.)
           optional: true
         - name: headache
           type: binary_toggle
           prompt: _(I am experiencing a headache)
           display_prompt: _(I am experiencing a headache:)
-          content: yes_no
+          content:
+            - label: _(Yes)
+              value: "yes"
+            - label: _(No)
+              value: "no"
           annotation: _(Please be sure to seek medical attention if needed.)
           optional: true
         - name: other_physical_effects
@@ -764,19 +794,65 @@ place:
           type: dropdown  #form type
           prompt: _(Select one of the following to identify the source of the bad air quality.)  #question prompt
           display_prompt: _(Pollution source observed:)  #text used when a submitted report is viewed later
-          content: air_quality_source  #points to dynamic_form_content section below, to avoid possibly duplicating complex form content
+          content:
+            - label: _(Asbestos)
+              value: absestos
+            - label: _(Burning during burn ban)
+              value: burning
+            - label: _(Chimney smoke)
+              value: chimney_smoke
+            - label: _(Gas station)
+              value: gas_station
+            - label: _(Mobile coater)
+              value: mobile_coater
+            - label: _(Odor)
+              value: odor
+            - label: _(Outdoor fire)
+              value: outdoor_fire
+            - label: _(Vehicle pollution)
+              value: vehicle_pollution
+            - label: _(Visible emission)
+              value: visible_emission
+            - label: _(Specific business or industry)
+              value: business_or_industry
+            - label: _(Don't know/unsure)
+              value: unsure
+            - label: _(Other (please describe in comments))
+              value: other
           optional: false
         - name: normal_activities
           type: radio_big_buttons
           prompt: "_(Please indicate your agreement with the following statement: My normal activities are affected by the air quality in my neighborhood.)"
           display_prompt: _(My normal activities are affected by the air quality in my neighborhood:)
-          content: likert_agree_5
+          content:
+            - label: _(Strongly agree)
+              value: strongly_agree
+            - label: _(Agree)
+              value: agree
+            - label: _(Neutral)
+              value: neutral
+            - label: _(Disagree)
+              value: disagree
+            - label: _(Strongly disagree)
+              value: strongly_disagree
           optional: false
         - name: activities_impacted
           type: dropdown
           prompt: _(Select one of the following to indicate how your normal activities are impacted.)
           display_prompt: _(My normal activities were impacted in the following way:)
-          content: activities_impacted
+          content:
+            - label: _(I choose to stay indoors to avoid the source of pollution)
+              value: stay_indoors
+            - label: _(I close the windows, limiting circulation)
+              value: close_windows
+            - label: _(I open all windows to circulate air)
+              value: open_windows
+            - label: _(I avoid outdoor physical activities)
+              value: avoid_outdoor_activities
+            - label: _(I need to constantly clean surfaces, as they are often greasy or dusty)
+              value: clean_surfaces
+            - label: _(Other (please specify in comments))
+              value: other
           optional: false
         - name: additional_comments
           type: text
@@ -803,86 +879,6 @@ place:
           display_prompt: _(Description of this tree:)
           placeholder: _(Description...)
           optional: false
-
-  # define shared form element content here
-  dynamic_form_content:
-    report_types:
-      - label: _(Observation)
-        value: observation
-      - label: _(Question)
-        value: question
-      - label: _(Idea)
-        value: idea
-      - label: _(Complaint)
-        value: complaint
-      - label: _(Green Screen Vote)
-        value: green_screen_vote
-    pollution_types:
-      - label: _(Sewage)
-        value: sewage
-      - label: _(Tires)
-        value: tires
-      - label: _(Illegal dumpsite)
-        value: dumpsite
-      - label: _(Litter)
-        value: litter
-      - label: _(Other)
-        value: other
-    air_quality_source:  #defines labels and values for form content. Can be referenced in the "content" parameter of a form type.
-      - label: _(Asbestos)
-        value: absestos
-      - label: _(Burning during burn ban)
-        value: burning
-      - label: _(Chimney smoke)
-        value: chimney_smoke
-      - label: _(Gas station)
-        value: gas_station
-      - label: _(Mobile coater)
-        value: mobile_coater
-      - label: _(Odor)
-        value: odor
-      - label: _(Outdoor fire)
-        value: outdoor_fire
-      - label: _(Vehicle pollution)
-        value: vehicle_pollution
-      - label: _(Visible emission)
-        value: visible_emission
-      - label: _(Specific business or industry)
-        value: business_or_industry
-      - label: _(Don't know/unsure)
-        value: unsure
-      - label: _(Other (please describe in comments))
-        value: other
-    likert_agree_5:
-      - label: _(Strongly agree)
-        value: strongly_agree
-      - label: _(Agree)
-        value: agree
-      - label: _(Neutral)
-        value: neutral
-      - label: _(Disagree)
-        value: disagree
-      - label: _(Strongly disagree)
-        value: strongly_disagree
-    activities_impacted:
-      - label: _(I choose to stay indoors to avoid the source of pollution)
-        value: stay_indoors
-      - label: _(I close the windows, limiting circulation)
-        value: close_windows
-      - label: _(I open all windows to circulate air)
-        value: open_windows
-      - label: _(I avoid outdoor physical activities)
-        value: avoid_outdoor_activities
-      - label: _(I need to constantly clean surfaces, as they are often greasy or dusty)
-        value: clean_surfaces
-      - label: _(Other (please specify in comments))
-        value: other
-    yes_no:
-      - label: _(Yes)
-        value: "yes"
-      - label: _(No)
-        value: "no"
-
 
   # define form elements that appear on every form here
   common_form_elements:
