--- a/src/flavors/duwamish-watershed/config.yml
+++ b/src/flavors/duwamish-watershed/config.yml
@@ -1,11 +1,11 @@
 # Settings for the app
 app:
   # HTML Title
-  title: Hey Duwamish!
+  title: The Green-Duwamish Watershed
   # Header name
-  name: "Hey Duwamish!"
+  name: "The Green-Duwamish Watershed"
   # Meta description that will show up in Google search results
-  meta_description: "_(Welcome! We are a community of residents and stakeholders who are monitoring the cleanup of toxic waste in Seattle's Duwamish River.)"
+  meta_description: "_(A free and open source stakeholder map of the Green-Duwamish Watershed (WRIA9))"
   # Meta author that will show up in Google search results
   meta_author: SmarterCleanup.org
 
