--- a/src/flavors/duwamish-watershed/config.yml
+++ b/src/flavors/duwamish-watershed/config.yml
@@ -15,7 +15,7 @@ app:
   # places_page_size: 100
 
   # Optional. List view is supported by default. Set to false to disable.
-  # list_enabled: false
+  list_enabled: false
 
 languages:
   - code: en
@@ -668,27 +668,3 @@ support:
   anonymous_name: _(Someone)
 
 pages:
-  - title: _(About)
-    slug: about
-    name: overview
-
-  - title: _(Background)
-    slug: background
-    name: background
-
-  - title: _(Get involved)
-    slug: getinvolved
-    name: contribute
-
-  - title: _(Green Screen)
-    slug: greenscreen
-    name: greenscreen
-    hide_from_top_bar: true
-
-  - slug: sponsors
-    name: sponsors
-    hide_from_top_bar: true
-
-  - slug: youthcorps2015
-    name: youthcorps2015
-    hide_from_top_bar: true
