--- a/src/flavors/waterfront/config.yml
+++ b/src/flavors/waterfront/config.yml
@@ -66,13 +66,10 @@ map:
       type: cartodb
       url: "https://smartercleanup.cartodb.com/api/v2/viz/b369d508-c02b-11e5-9a08-0ecfd53eb7d3/viz.json"
 
-      # WMS landuse
+      # Land Use
     - id: landuse
-      url: //d171ntg776wsmz.cloudfront.net/geoserver/wria9/gwc/service/wms
-      layers: 'wria9:Landuse2010'
-      version: '1.1.0'
-      transparent: 'true'
-      format: 'image/png'
+      type: cartodb
+      url: "https://hdbig.cartodb.com/api/v2/viz/76d1e054-d5ed-11e5-bf91-0e5db1731f59/viz.json"
       opacity: 0.5
 
       # WMS Original Flow
@@ -281,9 +278,8 @@ sidebar:
 
               # Land Use
             - id: landuse
-              description-image: /static/css/images/legend-landuse2010.png
-              description-image-alt: 'legend'
               title: _(Land use)
+              description: _(Land use data from 2010)
               visibleDefault: false
 
               # WMS Original Flow
