--- a/src/flavors/duwamish-watershed/config.yml
+++ b/src/flavors/duwamish-watershed/config.yml
@@ -583,12 +583,9 @@ sidebar:
               description: _(The original Duwamish River path)
               visibleDefault: false
 
-    ticker:
-      title: _(Activity Stream:)
-
 activity:
   # Optional. Activity is supported by default. Set to false to disable.
-  enabled: true
+  enabled: false
   # How often to refresh the activity list, in milliseconds.
   interval: 30000
 
