--- a/src/flavors/duwamish-watershed/config.yml
+++ b/src/flavors/duwamish-watershed/config.yml
@@ -220,32 +220,12 @@ sidebar:
   legend_enabled: true
   slug: filter-type
   # Layers are defined in the "map config" section
+  # A panel's icon is a icon's name taken from here:
+  # https://fortawesome.github.io/Font-Awesome/icons/
   panels:
-    legend:
-      title: _(Legend:)
-      items:
-        - title: _(Wetland protection)
-          image: /static/css/images/markers/marker-swimming.png
-          url: /filter/observation
-        - title: _(Research & Monitoring)
-          image: /static/css/images/markers/marker-research.png
-          url: /filter/idea
-        - title: _(Recreation / Open space)
-          image: /static/css/images/markers/marker-rec.png
-          url: /filter/question
-        - title: _(Tree planting)
-          image: /static/css/images/markers/marker-tree.png
-          url: /filter/complaint
-        - title: _(Water quality)
-          image: /static/css/images/markers/marker-water.png
-          url: /filter/complaint
-        - title: _(Forest management)
-          image: /static/css/images/markers/marker-forest.png
-          url: /filter/complaint
-        - title: _(Green infastructure)
-          image: /static/css/images/markers/marker-gsi.png
-          url: /filter/complaint                    
-    gis_layers:
+    - id: gis-layers
+      icon: list
+      view: GISLegendView
       title: _(Map Layers:)
       groupings:
         - id: grp-land
@@ -330,6 +310,33 @@ sidebar:
               title: _(Original River Path)
               description: _(The original Duwamish River path)
               visibleDefault: false
+
+    - id: reports_legend
+      view: LegendView
+      title: _(Community reports:)
+      icon: commenting
+      items:
+        - title: _(Wetland protection)
+          image: /static/css/images/markers/marker-swimming.png
+          url: /filter/observation
+        - title: _(Research & Monitoring)
+          image: /static/css/images/markers/marker-research.png
+          url: /filter/idea
+        - title: _(Recreation / Open space)
+          image: /static/css/images/markers/marker-rec.png
+          url: /filter/question
+        - title: _(Tree planting)
+          image: /static/css/images/markers/marker-tree.png
+          url: /filter/complaint
+        - title: _(Water quality)
+          image: /static/css/images/markers/marker-water.png
+          url: /filter/complaint
+        - title: _(Forest management)
+          image: /static/css/images/markers/marker-forest.png
+          url: /filter/complaint
+        - title: _(Green infastructure)
+          image: /static/css/images/markers/marker-gsi.png
+          url: /filter/complaint                    
 
 activity:
   # Optional. Activity is supported by default. Set to false to disable.
