Rename emelio's map title

--- a/src/flavors/duwamish-watershed/config.yml
+++ b/src/flavors/duwamish-watershed/config.yml
@@ -268,7 +268,7 @@ sidebar:
 
               # Emilio's map
             - id: emilio
-              title: "_(Emilio's map)"
+              title: "_(Green River Land Ownership)"
 
               # WRIA9 watershed
             - id: watershed
